# PDF-pages-size-counter

./: README.md  main.py  pdf_analyzer.spec  pyproject.toml  render.yaml  startup.sh
.github/workflows/: main_pdf-analyzer.yml
src/pdf_analyzer/: __init__.py  analyzer.py  app.py  color_detection.py  models.py  page_size.py  web_app.py
src/pdf_analyzer/static/: app.js  index.html  styles.css
tests/: test_analyzer.py  test_app.py  test_page_size.py  test_web_app.py
