[project]
name = "pdf-analyzer"
version = "0.1.0"
description = "FastAPI web PDF analyzer for page sizes, print area, and color usage."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "PyMuPDF>=1.24",
    "python-multipart>=0.0.9",
    "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27",
    "pytest>=8.0",
]

[project.scripts]
pdf-analyzer = "pdf_analyzer.app:run_server"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
pdf_analyzer = ["static/*"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
